<resources>
    <string name="app_name">CashChamp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="referid">Refer Id:</string>
    <string name="name">Sanjeev Kundan</string>
    <string name="balance">Champcash Balance: C$1.000</string>
    <string name="ijbalance">IJ Balance: C$:0.000000</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="enterreferid">Enter Refer Id of Sponsor</string>
    <string name="referidhint">Refer ID</string>
    <string name="submit">SUBMIT</string>

    <string name="contactyoursponsor">Please Contact your Sponsor before Proceeding Further!!!</string>
    <string name="dontknw">If You do not know Sponcor then</string>
    <string name="emails">Email us at</string>
    <string name="email">invite@champcash.com</string>
    <string name="callus">Call us at</string>
    <string name="call">+91-123-1236547</string>

    <string name="facingproblem">Facing Problems?</string>

    <string name="helpline">Helpline</string>
    //main screen
    <string name="singupchampcash">SIGN UP WITH CHAMPCASH</string>
    <string name="singupgoole">SIGN UP WITH GOOGLE</string>
    <string name="changedevice">CHANGE DEVICE / LOGIN</string>
    <string name="about">About Champcash | Need Help</string>
    <string name="developed">Developed by:- FluidSoft</string>

    //changedevice

    <string name="totransferchampcash">To Transfer ChampCash Account from One Device to another,Please Enter following Details Accurately.</string>
    <string name="enterpassword">Enter Password</string>
    <string name="referidet">Refer Id of Champcash</string>
    <string name="forgotpassword"><u>Forgot Password?</u>></string>

    //signup
    <string name="entername">Name</string>
    <string name="emailid">Emai id</string>
    <string name="dob">D.O.B</string>
    <string name="mobilenum">+91 13234567890</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="terms">I Accept </string>
    <string name="condition"><u>Terms and Conditions </u> </string>

    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Country</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="values">0.00000</string>
    <string name="c">C$</string>
    <string name="category">Earn More</string>

    <string name="select">Choose a country</string>
    <string-array name="support_arrays">
        <item>Accept The Challenge Issue</item>
        <item>Sign Up Issue</item>
        <item>Payment Issue</item>
        <item>Application Issue</item>
        <item>Others</item>
        <item>Joining issue</item>
    </string-array>
</resources>
