<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_marginBottom="30dp">

    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyMaterialTheme.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_backgraound"
        android:minHeight="?attr/actionBarSize">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

    </android.support.v7.widget.Toolbar>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterreferid"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/referidhint"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:background="@drawable/et_border"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btn_refer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit"
           android:paddingRight="25dp"
            android:paddingLeft="25dp"
            android:background="@color/orange"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/contactyoursponsor"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/dontknw"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="10dp"
            android:padding="2dp"
            android:maxLines="1"
            android:textColor="@android:color/holo_orange_dark"
            android:background="@drawable/rounded_corner2" />

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emails"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="13dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/callus"
                    android:layout_gravity="right"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call"
                    android:textSize="13dp"
                    android:layout_gravity="right"
                    android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="260dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/facingproblem"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient"/>

        <Button
            android:layout_width="260dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:text="@string/helpline"
            android:layout_marginTop="10dp"
            android:background="@drawable/gradient"/>







    </LinearLayout>
</LinearLayout>
