<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/orange"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/tv_refer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/referid"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tv_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tv_champcashbalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/tv_ijbalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ijbalance"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"/>

</LinearLayout>
