<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/abc" />

    <Button
        android:id="@+id/btn_champcash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp"

        android:background="@color/lime"
        android:text="@string/singupchampcash"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/red"
        android:text="@string/singupgoole"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/tv_changedevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/changedevice"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="200dp"
        android:layout_height="0.5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@android:color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/lime"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:layout_alignParentBottom="true"
            android:background="@color/lime"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:padding="8dp"
            android:text="@string/developed"/>
    </RelativeLayout>

</LinearLayout>
