<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:focusable="true"
    android:focusableInTouchMode="true"

    tools:context="com.example.designer.cashchamp.ChangeDevice">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyMaterialTheme.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_backgraound"
        android:minHeight="?attr/actionBarSize" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"/>

    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totransferchampcash"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/enter_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_enterpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterpassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:backgroundTint="@color/lime"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/enter_layout_referid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_referid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/referidet"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textCursorDrawable="@drawable/cursor_color"
            android:backgroundTint="@color/lime"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@color/lime"
        android:padding="16dp"
        android:text="@string/submit"
        android:ems="7"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold" />

    <View
        android:layout_width="300dp"
        android:layout_height="0.5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@android:color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"/>




</LinearLayout>
