<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MyMaterialTheme.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:background="@drawable/toolbar_backgraound"
        android:minHeight="?attr/actionBarSize" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"/>

        </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/profile"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entername"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:backgroundTint="@color/lime"/>
        </android.support.design.widget.TextInputLayout>




    </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/email"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <EditText
                        android:id="@+id/et_emailid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emailid"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:backgroundTint="@color/lime"/>
                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/password"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <EditText
                        android:id="@+id/et_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enterpassword"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:backgroundTint="@color/lime"/>
                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                  android:src="@mipmap/date"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <TextView
                        android:id="@+id/et_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dob"
                        android:onClick="showDatePickerDialog"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:padding="10dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:backgroundTint="@color/lime"/>
                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                 android:src="@mipmap/phone"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <EditText
                        android:id="@+id/et_mobilenum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobilenum"
                        android:inputType="number"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:backgroundTint="@color/lime"/>
                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/profile"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <Spinner
                        android:id="@+id/et_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country"
                        android:padding="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@android:color/white"
                        android:entries="@array/country_arrays"
                        android:prompt="@string/country_prompt" />
                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/profile"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <EditText
                        android:id="@+id/et_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/state"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:backgroundTint="@color/lime"/>
                </android.support.design.widget.TextInputLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/profile"/>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    >

                    <EditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textCursorDrawable="@drawable/cursor_color"
                        android:backgroundTint="@color/lime"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <CheckBox
                    android:id="@+id/cb_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms"
                    android:textAppearance="?android:textAppearanceSmall"/>
                <TextView
                    android:id="@+id/tv_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/condition"
                    android:textAppearance="?android:textAppearanceSmall"/>


            </LinearLayout>

            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/lime"
                android:text="Proceed"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:ems="8"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
